tests/sintax-semanth/should_fail/ifTypeChecking.tds
program
begin
    integer x,y;
    void main()
        begin
            x = 1;
            y = 20;
            if (x + y) then begin
                x = x + 1;
            end
        end
end